--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -14,7 +14,7 @@
   <%= f.password_field :password,class: "form-control" %>
   
   
-  <%= f.label :password_confirmation, "Confirmation", class: "label-#{yield(:class_tesxt)}" %>
+  <%= f.label :password_confirmation,  class: "label-#{yield(:class_tesxt)}" %>
   <%= f.password_field :password_confirmation, class: "form-control" %>
   
   
