Finish add-basic-info

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -101,3 +101,11 @@ field_with_errors {
    color: $state-danger-text;
  }
 }
+
+
+/* モーダルウインドウの位置調整 */
+
+
+.modal-dialog-center {
+  padding-top: 10%;
+}
