--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -10,6 +10,10 @@
   <%= f.email_field :email, class: "form-control" %>
   
   
+  <%= f.label :department, class: "ladel-#{yield(:class_text)}" %>
+  <%= f.text_field :department, class: "form-control" %>
+  
+  
   <%= f.label :password, class: "label-#{yield(:class_text)}" %>
   <%= f.password_field :password,class: "form-control" %>
   
